--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ opt-level = 3
 [dependencies]
 bevy = { version = "0.13.2", features = ["dynamic_linking"] }
 interpolation = "0.3.0"
+rand = "0.8.5"
